fix: don't hide overflowed part of processor

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,7 +30,6 @@ html, body {
   background: #333;
   padding: 8px 10px;
   border-radius: 5px;
-  overflow: hidden;
   cursor: move;
   font-family: 'monospace', 'courier', 'consola';
 }
